// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="cf-1f9r163"
>
  FormLabel
</label>
`;

exports[`should render hidden 1`] = `
<label
  className="cf-1f1cr8o"
>
  FormLabel
</label>
`;
